--- a/index.html
+++ b/index.html
@@ -79,11 +79,33 @@
         </div>
         <div class="data-importante scroll-reveal">
             <div class="flex">
+            </div>
+            <div class="flex">
                 <i class="fa-solid fa-calendar-days fa-2xl"></i>
                 <p>
                     DATA LIMITE PARA DOAÇÃO: <strong>19 DE NOVEMBRO</strong>
                 </p> 
-                <i class="fa-solid fa-tree fa-2xl"></i>
+                <i class="fa-solid fa-tree fa-2xl"></i>    
+            </div>
+        </div>
+    </section>
+    <section id="nossos-momentos" class="sensibilizacao">
+        <div class="flex" style="margin-bottom: 2rem; flex-direction: column;">
+            <div class="flex">
+                <i class="fa-solid fa-heart fa-2xl" style="color: var(--natal-verde);"></i>
+                <h3>Nossos Momentos</h3>
+            </div>
+            <div class="imagens" style="flex-direction: column">
+                <div class="imagem-esquerda">
+                    <img src="images/IMG_2440.jpg" alt="imagem 01" class="imagem imagem-esquerda">
+                    <img src="images/IMG_2452.jpg" alt="imagem 02" class="imagem imagem-esquerda">
+                    <img src="images/IMG_2472.jpg" alt="imagem 03" class="imagem imagem-esquerda">
+                </div>
+                <div class="imagem-direita">
+                    <img src="images/IMG_2449.jpg" alt="imagem 04" class="imagem imagem-direita">
+                    <img src="images/IMG_2450.jpg" alt="imagem 05" class="imagem imagem-direita">
+                    <img src="images/IMG_2486.jpg" alt="imagem 06" class="imagem imagem-direita">
+                </div>
             </div>
         </div>
     </section>
